<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <com.jaminoss.android.ourschool.views.CircleImageView
        android:id="@+id/user_main_dp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:civ_border_color="?colorPrimaryDark"
        app:civ_border_width="4dp"
        android:src="@drawable/default_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"/>

    <ImageView
        android:id="@+id/logoutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/fname_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_below="@id/user_main_dp"
        android:text="@string/student_name"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/user_main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/status"
        android:layout_below="@id/fname_main"/>

    <TextView
        android:id="@+id/dept_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_main_username"
        android:text="@string/student_class_info"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/user_main_username"
        android:layout_marginTop="50dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/v1"/>

    <TextView
        android:id="@+id/phone_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_below="@id/v1"
        android:layout_alignBaseline="@id/phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/email_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/email"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:id="@+id/subjects_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_main"
        android:layout_marginTop="25dp"
        android:text="@string/subjects"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/courses_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjects_title"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/subjects_list"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/courses_main"
        android:layout_marginTop="50dp"
        android:background="@android:color/white" />
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>