<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_admin_panel">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIuserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tIuserName"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiFullName"
            android:layout_marginTop="@dimen/margin_5"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tIPwd"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_class"
                android:inputType="textCapSentences|textCapWords"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tISubjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tIClass"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/Courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subjects"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tISubjects"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tIPhone"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/record_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_summary"
            android:layout_below="@id/tIMail"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            android:fontFamily="casual"
            tools:targetApi="jelly_bean" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/role"
            android:layout_below="@id/record_summary"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:id="@+id/rb_std"
                android:text="@string/radio_student"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_lec"
                android:textColor="@color/colorAccent"
                android:text="@string/radio_lecturer"/>
        </RadioGroup>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
